--- a/roles/app_server/tasks/main.yml
+++ b/roles/app_server/tasks/main.yml
@@ -3,36 +3,61 @@
   shell: curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -
 
 - name: Install NodeJS
-  sudo: yes
+  become: yes
   apt: pkg=nodejs state=latest
 
 - name: Install build tools
-  sudo: yes
+  become: yes
   apt: pkg=build-essential state=latest
 
+- name: Configure NPM
+  shell: mkdir -p ~/.npm-global && npm config set prefix ~/.npm-global
+
+- name: Configure env path
+  lineinfile: dest=~/.profile state=present line="export PATH=~/.npm-global/bin:$PATH"
+
+# temporary workaround (https://github.com/ansible/ansible-modules-extras/issues/1375#issuecomment-186512824)
 - name: Install PM2
-  sudo: yes
+  npm: name=pm2 global=yes state=present
+
+- name: Update PM2
   npm: name=pm2 global=yes state=latest
 
-- name: Install Gulp
-  sudo: yes
-  npm: name=gulp global=yes
+# temporary workaround (https://github.com/ansible/ansible-modules-extras/issues/1375#issuecomment-186512824)
+- name: Install Sails
+  npm: name=sails global=yes state=present
 
+- name: Update Sails
+  npm: name=sails global=yes state=latest
+
+# temporary workaround (https://github.com/ansible/ansible-modules-extras/issues/1375#issuecomment-186512824)
+- name: Install Gulp
+  npm: name=gulp global=yes state=present
+
+- name: Update Gulp
+  npm: name=gulp global=yes state=latest
+
+# temporary workaround (https://github.com/ansible/ansible-modules-extras/issues/1375#issuecomment-186512824)
 - name: Install Bower
-  sudo: yes
-  npm: name=bower global=yes
+  npm: name=bower global=yes state=present
+
+- name: Update Bower
+  npm: name=bower global=yes state=latest
 
 - name: Install Git
-  sudo: yes
+  become: yes
   apt: pkg=git state=latest
 
 - name: Install app dependencies
   npm: path=/var/www/tcp production=no
 
 - name: Install app dependencies (Bower)
-  bower: path=/var/www/tcp
+# bower: path=/var/www/tcp (https://github.com/ansible/ansible-modules-extras/issues/956)
+  shell: PATH=~/.npm-global/bin:$PATH && bower install
+  args:
+    chdir: /var/www/tcp
 
 - name: Run app
-  shell: pm2 start ecosystem.json
+  shell: PATH=~/.npm-global/bin:$PATH && pm2 start ecosystem.json
   args:
     chdir: /var/www/tcp
